// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slide> -> delay]: 3000 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ltorz7",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
  Object {
    "map": undefined,
    "name": "154hx1q",
    "next": undefined,
    "styles": "transition-delay:3000ms;",
  },
]
`;

exports[`<Slide> -> directions]: fromBottom (0 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1ltorz7",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromBottom (36 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "isw8fq",
    "next": undefined,
    "styles": "transform:translate3d(0,36px,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromBottom (36 string) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "isw8fq",
    "next": undefined,
    "styles": "transform:translate3d(0,36px,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromBottom (true) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1rlvajz",
    "next": undefined,
    "styles": "transform:translate3d(0,100%,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromLeft (0 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1ltorz7",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromLeft (36 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "12diew7",
    "next": undefined,
    "styles": "transform:translate3d(-36px,0,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromLeft (36 string) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "12diew7",
    "next": undefined,
    "styles": "transform:translate3d(-36px,0,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromLeft (true) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "byivbi",
    "next": undefined,
    "styles": "transform:translate3d(-100%,0,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromRight (0 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1ltorz7",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromRight (36 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ridttw",
    "next": undefined,
    "styles": "transform:translate3d(36px,0,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromRight (36 string) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ridttw",
    "next": undefined,
    "styles": "transform:translate3d(36px,0,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromRight (true) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "10pt53e",
    "next": undefined,
    "styles": "transform:translate3d(100%,0,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromTop (0 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ni6ja3",
    "next": undefined,
    "styles": "transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1ltorz7",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromTop (36 int) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "i15ueq",
    "next": undefined,
    "styles": "transform:translate3d(0,-36px,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromTop (36 string) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "i15ueq",
    "next": undefined,
    "styles": "transform:translate3d(0,-36px,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> directions]: fromTop (true) 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "lupkji",
    "next": undefined,
    "styles": "transform:translate3d(0,-100%,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> distanceUnit]: px 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "isw8fq",
    "next": undefined,
    "styles": "transform:translate3d(0,36px,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> distanceUnit]: rem 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "rftkpn",
    "next": undefined,
    "styles": "transform:translate3d(0,36rem,0);",
  },
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> hide [controlled]: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ltorz7",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> hide: hidden 1`] = `
Array [
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> hide: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ltorz7",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> show [controlled]: hidden 1`] = `
Array [
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> show: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ltorz7",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> toggle [controlled]: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ltorz7",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> toggle: hidden [2] 1`] = `
Array [
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> toggle: hidden 1`] = `
Array [
  Object {
    "name": "gyp8mm",
    "styles": "visibility:hidden;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;

exports[`<Slide> -> toggle: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "1ltorz7",
    "next": undefined,
    "styles": "visibility:visible;;transform:translate3d(0,0,0);",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "1gvesad",
    "next": undefined,
    "styles": "transition-property:visibility, transform;",
  },
]
`;
